build: non-root & jvm opts docker